# proethica

./: .db_initialized  .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  .mcp_server.pid  AUTHENTICATION_UPDATE_SUMMARY.md  CLAUDE.md  CLAUDE.md.bak  CLAUDE_WEB_CONTEXT.md  CLEANUP_REFACTORING.md  CLEANUP_SUMMARY.md  CODEBASE_ANALYSIS.md  CODESPACE_GUIDELINES_STARTUP.md  CODESPACE_SETUP_COMPLETE.md  COMPREHENSIVE_IMPLEMENTATION_STATUS.md  DEBUG_INSTRUCTIONS.md  DEMO_FEEDBACK.md  DEPLOYMENT_INSTRUCTIONS.md  DOCUMENTATION_STRUCTURE_PLAN.md  ENHANCED_SCENARIO_QUICK_START.md  ENRICHMENT_STATUS_TRACKER.md  ENTITY_UPDATE_PLAN.md  GUIDELINE_PREDICTION_ENHANCEMENT_PLAN.md  HOW_TO_RUN.md  HOW_TO_START.md  INSTALL.md  INTELLIGENT_ANNOTATION_PLAN.md  LICENSE  MCP_INTEGRATION_SUMMARY.md  MCP_INTEGRATION_TRACKING.md  NSPE_CASES_README.md  NSPE_CASE_IMPORT_README.md  ONTOLOGY_ENHANCEMENT_README.md  ONTOLOGY_ENRICHMENT_PLAN.md  ONTOLOGY_VALIDATION_REPORT.md  ONTSERVE_VIEWING_GUIDE.md  PHASE_2_COMPLETE.md  PROGRESS.md  (+447 more)
.claude/: settings.local.json.backup
.devcontainer/: devcontainer.json  docker-compose.yml  setup.sh
.github/: pull_request_template.md
app/: __init__.py  concept_meta.py  config.py  forms.py  template_filters.py
archive/: guideline_analysis_service_v1_removed.py
backups/: README.md  RESTORE_INSTRUCTIONS.md  RESTORE_POINT_20250721.md  RESTORE_POINT_CLEAN_GUIDELINES_READY.md  RESTORE_POINT_CONSTRAINTS_IMPLEMENTED.md  ai_ethical_dm_20250809_235352.dump  ai_ethical_dm_backup_20250323_135340.dump  ai_ethical_dm_backup_20250326_110159.dump  ai_ethical_dm_backup_20250329_181922.dump  ai_ethical_dm_backup_20250403_133257.dump  ai_ethical_dm_backup_20250403_133551.dump  ai_ethical_dm_backup_20250403_135008.dump  ai_ethical_dm_backup_20250403_135116.dump  ai_ethical_dm_backup_20250405_110531.dump  ai_ethical_dm_backup_20250405_123841.dump  ai_ethical_dm_backup_20250405_182557.dump  ai_ethical_dm_backup_20250407_171626.dump  ai_ethical_dm_backup_20250428_000814.dump  ai_ethical_dm_backup_20250511_152204.dump  ai_ethical_dm_backup_20250511_165244.dump  ai_ethical_dm_backup_20250511_233805.dump  ai_ethical_dm_backup_20250516_223821.dump  ai_ethical_dm_backup_20250517_014851.dump  ai_ethical_dm_backup_20250517_163625.dump  ai_ethical_dm_backup_20250520_005033.dump  ai_ethical_dm_backup_20250520_190620.dump  ai_ethical_dm_backup_20250521_190814.dump  ai_ethical_dm_backup_20250521_193348.dump  ai_ethical_dm_backup_20250521_195100.dump  ai_ethical_dm_backup_20250531_082909.dump  ai_ethical_dm_backup_20250531_083338.dump  ai_ethical_dm_backup_20250531_083413.dump  ai_ethical_dm_backup_20250531_084858.dump  ai_ethical_dm_backup_20250606_192941.dump  ai_ethical_dm_backup_20250606_214956.dump  ai_ethical_dm_backup_20250609_191443.dump  ai_ethical_dm_backup_20250717_051729.dump  ai_ethical_dm_backup_20250721_103920.dump  ai_ethical_dm_backup_20250729_201056.dump  ai_ethical_dm_backup_20250807_053749.dump  (+20 more)
config/: __init__.py  enhanced_scenario_config.py  environment.py  models.py  ontserve_config.py
config_old_backup/: models.py
data/: NSPE_Code_of_Ethics.md  missing_precedent_cases.json  modern_nspe_cases.json  new_cases_to_scrape.json  nspe_cases.json  sample_structural_safety_case.json  test_cases.json
db_migration/: 007_create_decision_embeddings.sql  012_add_iao_document_fields.sql  013_OBSOLETE_README.md  013_create_scenario_participants.sql  014_create_step4_enhanced_analysis.sql  015_add_generation_log_to_scenario_assemblies.sql  015_create_precedent_features.sql  015_create_scenario_assemblies.sql  016_add_cited_cases_columns.sql  016_create_pipeline_runs.sql  017_add_entity_matching_fields.sql  017_create_scenario_exploration_sessions.sql  018_SUPERSEDED_decision_focus_tables.sql  019_drop_legacy_decision_tables.sql  020_rename_is_committed_to_is_published.sql  021_add_pipeline_queue_config.sql  022_create_prompt_registry.sql  023_add_component_embedding_columns.sql  add_extraction_section_prompts.sql  add_section_prompt_templates.sql  add_section_type_to_extraction_prompts.sql
demo/: README.md  case24_02_appendix.html  case24_02_compact.html  static_analysis_case7_mockup.py
docker/: app.Dockerfile  mcp.Dockerfile
docs/: ALLEN_OWL_TIME_INTEGRATION.md  BFO_TEMPORAL_MAPPINGS.md  CASE_ANALYSIS_IMPLEMENTATION_PLAN.md  CLEANUP_REFACTORING_PLAN.md  CRITICAL_ISSUES_REMEDIATION_PLAN.md  DEMO_CASES_ANALYSIS_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_PLAN.md  DOCUMENTATION_ORGANIZATION.md  DOMAIN_GENERALIZATION_IMPLEMENTATION.md  ENGINEERING_ONTOLOGY_SOURCES.md  ENTITY_STORAGE_ARCHITECTURE_PLAN.md  FILE_ORGANIZATION_SUMMARY.md  (+127 more)
docs-internal/: 2026-03-23-code-hygiene-audit.md  CODEBASE_ANALYSIS.md  unified-pipeline-plan-2026-03-11.md
(+2951 files in other folders)
